@@ -4,6 +4,7 @@
    - new: core::shell: help_show_inherited and comp_show_inherited Attributes to 
           respectively show inherited Attributes on help Commands and show inherited 
           Attributes when using completion
+   - new: bin/metabrik: will load .metabrik_script_rc (if exists) when executing a script
 
 1.02 Sun Nov 30 12:28:07 CET 2014
    - bugfix: bin/metabrik: document --script option
